tests/baselines/reference/unusedVariablesinNamespaces1.errors.txt
tests/cases/compiler/unusedVariablesinNamespaces1.ts(3,11): error TS6133: Variable 'lettersRegexp' has never been used.


==== tests/cases/compiler/unusedVariablesinNamespaces1.ts (1 errors) ====
    
    namespace Validation {
        const lettersRegexp = /^[A-Za-z]+$/;
              ~~~~~~~~~~~~~
!!! error TS6133: Variable 'lettersRegexp' has never been used.
    }